--- a/Web.config
+++ b/Web.config
@@ -73,7 +73,7 @@
     </appSettings>
   </location>
   <connectionStrings>
-    <add name="mycon" connectionString="Server=DESKTOP-1AO0EPL;Database=Building_Construction_System;Integrated Security=true" />
+    <add name="mycon" connectionString="Data Source=DESKTOP-GQ9S9TQ;Initial Catalog=Building_Construction_System;Integrated Security=True" />
     <add name="Building_Construction_SystemConnectionString" connectionString="Data Source=DESKTOP-1AO0EPL;Initial Catalog=Building_Construction_System;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="mycon1" connectionString="Data Source=tcp:building-construction-portal-dbdbserver.database.windows.net,1433;Initial Catalog=Building_Construction_System;User Id=Mihir@building-construction-portal-dbdbserver;Password=@Debug17Mi." />
   </connectionStrings>
